<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".ui.login_register_fragments.LoginFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/indigo_daisy2"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/et_email"/>

    <EditText
        android:id="@+id/et_email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textAlignment="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/et_password"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:padding="15dp"
        android:backgroundTint="#DD5D35"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/arrowright"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipeleft"
        android:textStyle="bold"
        android:textColor="#2C2C2C"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>




</RelativeLayout>