<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".ui.login_register_fragments.RegisterFragment"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy2"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/re_type_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/etAge"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:maxLength="3"
        android:inputType="number"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/etLocation"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#DD5D35"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/create_account"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrowleft"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#252525"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>
    </LinearLayout>
</ScrollView>